# actix-fullstack

./: Cargo.toml  dot.env  readme.md  user.rs
docs/: 01_initial_project_setup.md  02_logging.md  03_reading_application_defaults_from_.env.md  04_making_the_application_modular.md  05_returning_json_response.md  06_updating_the_logger.md  07_adding_a_database_to_persist_data.md  08_adding_sea_orm.md  09_sea_orm_creating_models_and_entities.md  10_adding_missing_field_to_a_model.md  11_updating_entity.md  12_adding_the_users_module.md  13_adding_admin_fields_to_user.md  14_the_user_api.md
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240818_160752_create_user_table.rs  m20240822_195452_alter_user_table_add_password_field.rs  m20240913_193712_create_user_table.rs  m20240916_144220_alter_user_table_add_admin_fields.rs
src/: main.rs
src/auth/: handlers.rs  middlewares.rs  mod.rs  models.rs  urls.rs
src/home/: handlers.rs  mod.rs  models.rs  urls.rs
src/users/: handlers.rs  middlewares.rs  mod.rs  models.rs  pagination.rs  serializers.rs  urls.rs
src/utils/: auth.rs  config.rs  log.rs  mod.rs  response.rs
