[package]
name = "actix-fullstack"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
migration = { path = "migration" }
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
